# ai-orchestrator-lab

./: .env.example  .gitattributes  .gitignore  .gitleaksignore  README.md  TASKS.md  package.json  pnpm-lock.yaml  task.md  tsconfig.base.json  vercel.json
.claude/: launch.json
agents/: README.md  SAFETY.md
apps/desktop/src-tauri/: Cargo.toml  README.md
docs/: 00-product-brief.md  01-architecture.md  02-feature-map.md  03-provider-profiles.md  04-agent-orchestration.md  05-memory-memento.md  06-roadmap.md  07-dgx-local-fallback.md  08-ui-direction.md  09-agent-soul.md  10-backup-and-mobile.md  100-learning-loop-closure.md  101-memory-eval-harness.md  102-skill-runtime-activation-contract.md  103-batch-remember-seam.md  104-local-simplememo-batch-write.md  105-c-batch-learning-wiring.md  106-industrial-zone-batch-1.md  107-industrial-zone-batch-2.md  108-industrial-zone-batch-3.md  109-industrial-zone-batch-4.md  11-conversation-mode.md  110-industrial-zone-batch-5-theater-mode.md  111-industrial-zone-batch-5-impl-handoff.md  112-industrial-zone-batch-6-visual-polish.md  113-industrial-zone-batch-7.md  114-industrial-zone-batch-8.md  115-industrial-zone-batch-9.md  116-industrial-zone-batch-10.md  117-industrial-zone-batch-11.md  118-industrial-zone-batch-12.md  119-industrial-zone-batch-13.md  12-external-review-plan.md  120-industrial-zone-batch-14.md  121-industrial-zone-batch-15.md  122-industrial-zone-batch-16.md  123-industrial-zone-batch-17.md  124-industrial-zone-batch-18.md  125-industrial-zone-batch-19.md  126-industrial-zone-batch-20.md  (+167 more)
(+1424 files in other folders)
