[package]
name = "desktop"
version = "0.0.0"
description = "Tauri desktop shell for AI Orchestrator Lab"
authors = ["AI Orchestrator Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.0.3"

[dependencies]
tauri = { version = "2.0.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
strip = true
panic = 'abort'
